force-app/main/default/objects/Opportunity/fields/BattleId__c.field-meta.xml
<CustomField>
    <fullName>BattleId__c</fullName>
    <description>External Id</description>
    <displayFormat>Battle-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Battle Id</label>
    <type>AutoNumber</type>
</CustomField>