force-app/main/default/objects/Opportunity/fields/FieldDefinition__c.field-meta.xml
<CustomField>
    <fullName>FieldDefinition__c</fullName>
    <description>JSON Definition of the field</description>
    <label>Field Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>