force-app/main/default/objects/Opportunity/fields/InitialLiveLevel__c.field-meta.xml
<CustomField>
    <fullName>InitialLiveLevel__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Initial amount of lives each player has.</description>
    <label>Initial Live Level</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>