force-app/main/default/objects/Opportunity/fields/MaxRounds__c.field-meta.xml
<CustomField>
    <fullName>MaxRounds__c</fullName>
    <defaultValue>100</defaultValue>
    <description
  >Maximum number of rounds in a single battle to avoid infinite loop</description>
    <label>Max Rounds</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>