force-app/main/default/objects/Opportunity/fields/NumberOfPlayers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPlayers__c</fullName>
    <description>Number of players participated in the battle.</description>
    <label>Number of Players</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>