force-app/main/default/objects/Opportunity/fields/NumberOfWinners__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWinners__c</fullName>
    <description>Number of winners in the battle.</description>
    <label>Number of Winners</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.IsWinner__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>