force-app/main/default/objects/Opportunity/fields/Players__c.field-meta.xml
<CustomField>
    <fullName>Players__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of players participated in the battle.</description>
    <label>Players</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>