force-app/main/default/objects/Opportunity/fields/RoundsCompleted__c.field-meta.xml
<CustomField>
    <fullName>RoundsCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rounds run the battle to completion.</description>
    <label>Rounds Completed</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>