force-app/main/default/objects/Opportunity/fields/Winners__c.field-meta.xml
<CustomField>
    <fullName>Winners__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of winners at the end of the battle.</description>
    <label>Winners</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>